--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <div class="footer">
         <p>(☆▽☆) dr3^my9t & Taurus</p>
 	<p class="e">COPYRIGHT © 2017 – 2020 Paomfz ALL RIGHTS RESERVED. Contact:</p>
-	<p><a href="" target="_blank">PaoMian Hax is a team that since 2016 brings quality services in various areas.
+	<p><a href="" target="_blank">PaoMian Hax is a team that since 2016 brings quality services in various areas(except china).
 </a>　　　丨　　　　<a href="https://www.dreamynight.cn" target="dreamynight">dr3^my9t - blog</a></div>
 	<audio controls autoplay="autoplay" loop="loop" style="display:none;">
   <source src="static/music.mp3" type="audio/mpeg" />
