--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta name="baidu-site-verification" content="vjqHMTOxEG">
-    <meta charset="UTF-8">
-    <meta http-equiv="Cache-Control" content="no-transform">
-    <meta http-equiv="Cache-Control" content="no-siteapp">
-    <meta name="”viewport”" content="”width=1050," initial-scale="1.0," minimum-scale="1.0," maximum-scale="1.0″">
-    <meta name="csrf-param" content="_csrf">
-    <meta name="csrf-token" content="dhd5ICmvmAvPUI4N36v-6o0et4bu3cCaLQ0qvfLfNlQAZhBxS-Ouepkn5E6Km4_S4lzuq6ObpNt_b0P1g69FAQ==">
-    <title>泡面辅助  ||  PaoMian Hax</title>
-    <meta name="keywords" content="泡面辅助,PaoMian Hax,CF泡面辅助官网,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,www.paomfz.com,HACK CF,CFVN VIP CHEAT">
-<link href="static/css/style.css" rel="stylesheet" 0="frontend\assets\AppAsset">
+<meta name="baidu-site-verification" content="vjqHMTOxEG">
+<meta charset="UTF-8">
+<meta http-equiv="Cache-Control" content="no-transform">
+<meta http-equiv="Cache-Control" content="no-siteapp">
+<meta name="”viewport”" content="”width=1050," initial-scale="1.0," minimum-scale="1.0," maximum-scale="1.0″">
+<title>泡面辅助  ||  PaoMian Hax</title>
+<meta name="keywords" content="泡面辅助,PaoMian Hax,CF泡面辅助官网,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,CF越南服官网,CF越南服,CF越南服下载,CF越南服最新,www.paomfz.com,HACK CF,CFVN VIP CHEAT">
 <link href="static/css/base.css" rel="stylesheet">
-<link rel="stylesheet" href="static/css/APlayer.min.css">
-<script src="static/js/jquery-1.9.1.min.js"></script>
-<script src="static/js/yii.js"></script>    <meta property="qc:admins" content="73675427776516741672116375">
-<script src="static/js/APlayer.min.js"></script>
-<script src="static/js/Meting.min.js"></script>
 </head>
 
-<body class="index">    
-    <style>
+<body class="index">
+<style>
     .daohang{
-        background: url("static/images/H436f35d83849433281bf453d39237ed.jpg") no-repeat center;
+        background: url("https://ae01.alicdn.com/kf/H436f35d83849433281bf453d39237edcc.jpg") no-repeat center;
         height: 1080px;
     }
     .daohang li a
@@ -69,7 +59,7 @@
     .soft>div[left]>div
     {
         height: 150px;
-        background: url("static/images/H436f35d83849433281bf453d39237ed.jpg") no-repeat left 11px;
+        background: url("https://ae01.alicdn.com/kf/H436f35d83849433281bf453d39237edcc.jpg") no-repeat left 11px;
         padding-left: 30px;
     }
     .soft>div[left] p[title]
@@ -137,67 +127,41 @@
 
 </style>
 <div class="daohang">
-    <div class="w1080"> 
+  <div class="w1080">
+    <ul>
+      <li> <i></i> <a href="download"> Download </a> </li>
+      <li style="display: none">
+      <li> <i></i> <a href="https://discord.gg/BJ6DFrr"> Discord Group </a> </li>
+      <li style="display: none"> </li>
+    </ul>
+    <div class="soft">
+      <div right="">
+        <p slogan="">PaoMian Hax CrossFire</p>
         <ul>
-                
-                            <li>
-                    <i></i>
-                    <a href="download.html">
-                        Download               </a>    
-                </li>          
-            <li style="display: none">
-                            <li>
-                    <i></i>
-                    <a href="javascript:;">
-                        Discord Group                   </a>
-                </li>            
-            <li style="display: none">                
-            </li>
+          <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">Download</a></li>
+          <li buy=""><a href="https://www.128faka.com/links/47CE658F">Purchase>></a></li>
         </ul>
-
-
-        <div class="soft">
-            <div right="">
-                <p slogan="">PaoMian Hax For CrossFire</p>
-                <ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                    <li ver=""><a href="javascript:;" target="_blank">Download</a></li>
-                    <li buy=""><a href="javascript:;">Purchase>></a></li>
-                </ul>
-                <p>Support: windows XP,7,8.1,10(32位/64位)</p>
-                <div log="">
-                    <div>
-                        <p>Update Logs:</p>
-                        <ul>
-     <li>CFVn-0713 None</li>			  
-</ul>
-                    </div>
-                </div>
-            </div>
+        <p>Support: windows XP,7,8.1,10  (32bit/64bit)</p>
+        <div log="">
+          <div>
+            <p>Update Logs:</p>
+            <ul>
+              <li>CFVn-0713 None</li>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
   </div>
-  <div class="footer">
-        <p>(☆▽☆) dr3^my9t & Taurus</p>
-	<p>COPYRIGHT © 2017 – 2020 Paomfz ALL RIGHTS RESERVED. Contact:</p>
-	<p>PaoMian Hax is a team that since 2016 brings quality services in various areas. (Except China)</p>
-	<p><a href="https://www.paomfz.com" target="PaoMian">PaoMian Hax
-</a>　　　　丨　　　　<a href="javascript:;" target="dreamynight">dr3^my9t - blog</a></p></div>
-	<audio controls="" autoplay="autoplay" loop="loop" style="display:none;">
+</div>
+<div class="footer">
+  <p>(☆▽☆) dr3^my9t & Taurus</p>
+  <p>COPYRIGHT © 2017 – 2020 Paomfz ALL RIGHTS RESERVED. Contact:</p>
+  <p>PaoMian Hax is a team that since 2016 brings quality services in various areas. (Except China)</p>
+  <p><a href="https://www.paomfz.com" target="PaoMian">PaoMian Hax </a>　　　　丨　　　　<a href="javascript:;" target="dreamynight">dr3^my9t - blog</a></p>
+</div>
+<audio controls="" autoplay="autoplay" loop="loop" style="display:none;">
   <source src="static/music.mp3" type="audio/mpeg">
-  </audio>
-   <!-- <div class="aplayer" data-id="551568243" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false" data-volume="0.35"></div>-->
-	</body></html>
+</audio>
+</body>
+</html>
