--- a/index.html
+++ b/index.html
@@ -131,16 +131,21 @@
     <ul>
       <li> <i></i> <a href="download"> Download </a> </li>
       <li style="display: none">
+                            <li>
+                    <i></i>
+                    <a href="https://jq.qq.com/?_wv=1027&k=w2oLUHep">
+                        QQ群              </a>     
+                </li>            
       <li> <i></i> <a href="https://discord.gg/BJ6DFrr"> Discord Group </a> </li>
       <li style="display: none"> </li>
     </ul>
     <div class="soft">
       <div right="">
         <p slogan="">PaoMian Hax</p>
-        <p slogan="">ĐỘT KÍCH</p>
+        <p slogan=""></p>
         <ul>
-          <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">Download</a></li>
-          <li buy=""><a href="https://www.128faka.com/links/47CE658F">Purchase>></a></li>
+          <li ver=""><a href="https://www.lanzoux.com/b0svooah" target="_blank">下载中心</a></li>
+          <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密>></a></li>
         </ul>
         <p>Support: windows XP,7,8.1,10  (32bit/64bit)</p>
         <div log="">
